2008-04-01  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/index.html: 
	  add the patent violation news entry

2008-03-24  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/htaccess: change order of redirecto to get the ics
	redirect working... At least, to try to have it working :-)

2008-03-23  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/start/schedule-unstable.ics: update for 2.23 cycle.

2008-03-22  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/Makefile.am: 
	  fix missing files in makefile

2008-03-22  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/data/themes/cheese/default.css,
	  www.gnome.org/projects/cheese/data/themes/cheese/document.all.css,
	  www.gnome.org/projects/cheese/data/themes/cheese/document.print.css,
	  www.gnome.org/projects/cheese/data/themes/cheese/document.screen.css,
	  www.gnome.org/projects/cheese/data/themes/cheese/frontpage.css,
	  www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/screenshots.html,
	  www.gnome.org/projects/cheese/tour.html: 
	  clean up the cheese css files

2008-03-19  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/htaccess: update for SoC 2008
	* www.gnome.org/index.wml: add SoC news

2008-03-17  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/index.html: 
	  add a new link to the press section of cheese

2008-03-14  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/data/tour/cheese-about.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-countdown.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-effects.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-main.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-share.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-video.jpg,
	  www.gnome.org/projects/cheese/tour.html: 
	  sharpen the cheese tour images
