@@ -1,3 +1,8 @@
+2008-04-02  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/index.html: 
+	  remove the april fools joke
+
 2008-04-01  daniel g. siegel <dgsiegel@gmail.com>
 
 	* www.gnome.org/projects/cheese/index.html: 
